--- a/Forge/settings.gradle
+++ b/Forge/settings.gradle
@@ -1,3 +1,17 @@
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+        maven {
+            name = 'MinecraftForge'
+            url = 'https://maven.minecraftforge.net/'
+        }
+    }
+}
+
+plugins {
+    id 'org.gradle.toolchains.foojay-resolver-convention' version '0.5.0'
+}
+
 rootProject.name = 'geckolib-forge-4.0'
 include ':geckolib-core'
 project(':geckolib-core').projectDir = new File('./core')
