--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
-org.gradle.jvmargs=-Xmx3G
+org.gradle.jvmargs=-Xmx3G           
 org.gradle.daemon=false
 
 mod_version=4.2
+minecraft_version=1.20.1
 maven_group=software.bernie.geckolib
