--- a/settings.gradle
+++ b/settings.gradle
@@ -16,5 +16,8 @@ pluginManagement {
     }
 }
 
+plugins {
+    id 'org.gradle.toolchains.foojay-resolver-convention' version '0.5.0'
+}
 rootProject.name = 'geckolib-4.0'
 include 'core', 'Fabric', 'Forge'
