--- a/Fabric/build.gradle
+++ b/Fabric/build.gradle
@@ -16,29 +16,34 @@ base {
     archivesName = "geckolib-fabric-${minecraft_version}"
 }
 
-version = project.mod_version
-group = project.maven_group
+version = mod_version
+group = maven_group
 
 repositories {
     mavenCentral()
-    maven { url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/' }
-	maven { url "https://cfa2.cursemaven.com" }
-    maven { url "https://plugins.gradle.org/m2/" }
+    maven {
+        url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
+        content {
+            includeGroup "com.eliotlash.mclib"
+        }
+    }
 }
 
 dependencies {
     // Minecraft/Fabric deps
-    minecraft "com.mojang:minecraft:${project.minecraft_version}"
+    minecraft "com.mojang:minecraft:${minecraft_version}"
     mappings loom.officialMojangMappings()
 	//mappings( loom.layered() {
 	//	officialMojangMappings()
 	//	parchment("org.parchmentmc.data:parchment-1.19.2:2022.08.14@zip")
 	//})
-    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+    modImplementation "net.fabricmc:fabric-loader:${fabric_loader_version}"
+    modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_api_version}"
 
-    implementation(include('com.eliotlash.mclib:mclib:20'))
-    implementation project(':core')
+    compileOnly project(':core')
+    compileOnly(include("com.eliotlash.mclib:mclib:20"))
+    modLocalRuntime("com.eliotlash.mclib:mclib:20") //Since we shade this, we don't want this to be a dep in publishing.
+
 
     implementation group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.2'
 }
@@ -50,8 +55,8 @@ jar {
                 "Specification-Title"     : "GeckoLib",
                 "Specification-Vendor"    : "Gecko",
                 "Specification-Version"   : "1", // We are version 1 of ourselves
-                "Implementation-Title"    : project.name,
-                "Implementation-Version"  : project.mod_version,
+                "Implementation-Title"    : name,
+                "Implementation-Version"  : mod_version,
                 "Implementation-Vendor"   : "Gecko",
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
@@ -94,12 +99,27 @@ sourcesJar {
     from project(":core").sourceSets.main.allSource
 }
 
+def replaceProperties = [
+        version: version,
+        mod_id: mod_id,
+        mod_display_name: mod_display_name,
+        mod_license: mod_license,
+        mod_authors: mod_authors,
+        mod_description: mod_description,
+        minecraft_version: minecraft_version,
+        fabric_loader_version: fabric_loader_version,
+        fabric_api_version: fabric_api_version
+]
+
 processResources {
-    inputs.property "version", project.version
+    inputs.property "version", version
+
+    inputs.properties replaceProperties
 
     filesMatching("fabric.mod.json") {
-        expand "version": project.version
+        expand replaceProperties
     }
+
     doLast {
         def jsonMinifyStart = System.currentTimeMillis()
         def jsonMinified = 0
@@ -121,6 +141,14 @@ publishing {
         mavenJava(MavenPublication) {
             artifactId base.archivesName.get()
             from components.java
+
+            pom.withXml {
+                asNode().dependencies.dependency.each { dep ->
+                    if("mclib".equals(dep.artifactId.last().value().last())) {
+                        assert dep.parent().remove(dep)
+                    }
+                }
+            }
         }
     }
     repositories {
@@ -182,7 +210,7 @@ if (file('key.properties').exists()) {
 		
 		token = modrinthProp.getProperty('modrinthKey')
 		projectId = '8BmcQJ2H' 
-		versionNumber = project.mod_version 
+		versionNumber = mod_version
 		versionName = "Fabric ${minecraft_version}"
 		uploadFile = remapJar 
 		changelog = rootProject.file("changelog.txt").text
