--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,21 @@
-org.gradle.jvmargs=-Xmx3G           
+org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
+mod_id=geckolib
 mod_version=4.2
-minecraft_version=1.20.1
+minecraft_version=1.20
 maven_group=software.bernie.geckolib
+mod_license=MIT
+mod_authors=Gecko, Eliot, AzureDoom, DerToaster, Tslat, Witixin
+mod_description=GeckoLib is an animation engine for Minecraft Mods, with support for complex 3D keyframe-based animations, 30+ easings, concurrent animation support, sound and particle keyframes, event keyframes, and more.
+mod_display_name=GeckoLib 4
+
+#Fabric Settings
+fabric_loader_version=0.14.21
+fabric_api_version=0.83.0+1.20
+
+#Forge Settings
+forge_version=46.0.1
+forge_version_range=[46,)
+forge_loader_range=[46,)
+minecraft_version_range=[1.20, 1.21)
