--- a/Forge/build.gradle
+++ b/Forge/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'java'
+    id 'eclipse' //both are required for the ideCopyResourcesTask
+    id 'idea'
     id 'maven-publish'
     id 'net.minecraftforge.gradle' version '[6.0,6.2)'
     id 'com.matthewprenger.cursegradle' version '1.4.0'
