--- a/Fabric/build.gradle
+++ b/Fabric/build.gradle
@@ -1,5 +1,6 @@
     plugins {
     id 'fabric-loom' version '1.2-SNAPSHOT'
+    id 'fabric-loom' version '1.3-SNAPSHOT'
     id 'java'
     id 'maven-publish'
     id 'com.matthewprenger.cursegradle' version '1.4.0'
