Rename version and group

--- a/Forge/src/main/resources/META-INF/mods.toml
+++ b/Forge/src/main/resources/META-INF/mods.toml
@@ -5,7 +5,7 @@ license="${mod_license}"
 
 [[mods]]
 modId="${mod_id}"
-version="${mod_version}"
+version="${version}"
 displayName="${mod_name}"
 displayURL="http://geckolib.com/"
 logoFile="geckolib.png" 
