--- a/Fabric/build.gradle
+++ b/Fabric/build.gradle
@@ -16,9 +16,6 @@ base {
     archivesName = "geckolib-fabric-${minecraft_version}"
 }
 
-version = mod_version
-group = maven_group
-
 repositories {
     mavenCentral()
     maven {
@@ -50,7 +47,7 @@ jar {
                 "Specification-Vendor"    : "Gecko",
                 "Specification-Version"   : "1", // We are version 1 of ourselves
                 "Implementation-Title"    : name,
-                "Implementation-Version"  : mod_version,
+                "Implementation-Version"  : version,
                 "Implementation-Vendor"   : "Gecko",
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
@@ -195,7 +192,6 @@ if (file('key.properties').exists()) {
 		
 		token = modrinthProp.getProperty('modrinthKey')
 		projectId = '8BmcQJ2H' 
-		versionNumber = mod_version
 		versionName = "Fabric ${minecraft_version}"
 		uploadFile = remapJar 
 		changelog = rootProject.file("changelog.txt").text
