--- a/Forge/build.gradle
+++ b/Forge/build.gradle
@@ -190,17 +190,15 @@ publishing {
         }
     }
     repositories {
-        if (System.getenv("cloudUsername") == null && findProperty("cloudUsername") == null) {
+        if (System.getenv("cloudUsername") == null && System.getenv("cloudPassword") == null) {
             mavenLocal()
         }
         else maven {
             name = "cloudsmith"
             url = "https://maven.cloudsmith.io/geckolib3/geckolib/"
             credentials {
-                def envUsername = System.getenv("cloudUsername")
-                def envPassword = System.getenv("cloudPassword")
-                username = envUsername == null ? findProperty("cloudUsername") : envUsername
-                password = envPassword == null ? findProperty("cloudPassword") : envPassword
+                username = System.getenv("cloudUsername")
+                password = System.getenv("cloudPassword")
             }
         }
     }
