--- a/Forge/build.gradle
+++ b/Forge/build.gradle
@@ -7,6 +7,7 @@ plugins {
     id 'org.spongepowered.mixin' version '0.7.+'
     id 'org.parchmentmc.librarian.forgegradle' version '1.+'
     id 'com.modrinth.minotaur' version '2.8.3'
+    id 'net.darkhax.curseforgegradle' version '1.1.15'
 }
 
 import groovy.json.JsonOutput
@@ -15,8 +16,6 @@ import groovy.json.JsonSlurper
 base {
     archivesName = "${mod_id}-forge-${minecraft_version}"
 }
-version = project.version
-group = project.group
 
 minecraft {
     mappings channel: 'parchment', version: parchment_version
@@ -219,3 +218,20 @@ modrinth {
         debugMode = true
         //https://github.com/modrinth/minotaur#available-properties
 }
+
+task publishToCurseForge(type:  net.darkhax.curseforgegradle.TaskPublishCurseForge) {
+    group = "publishing"
+    apiToken = System.getenv("curseforge.apitoken") ?: "Invalid/No API Token Found"
+
+    def mainFile = upload(388172, file("${project.buildDir}/libs/${archivesBaseName}-${version}.jar"))
+    mainFile.releaseType = "release"
+    mainFile.addModLoader("Forge")
+    mainFile.addGameVersion(minecraft_version)
+    mainFile.addJavaVersion("Java 17")
+    mainFile.changelog = rootProject.file("changelog.txt").text
+
+    debugMode = true
+    //https://github.com/Darkhax/CurseForgeGradle#available-properties
+}
+
+tasks.publishToCurseForge.dependsOn(tasks.build)
