--- a/Fabric/build.gradle
+++ b/Fabric/build.gradle
@@ -35,7 +35,6 @@ dependencies {
 
     compileOnly project(':core')
     include(implementation("com.eliotlash.mclib:mclib:20"))
-    testCompileOnly "com.eliotlash.mclib:mclib:20"
     implementation "com.google.code.findbugs:jsr305:3.0.1" //Provides the Nullable annotations
 }
 
@@ -43,12 +42,12 @@ jar {
     from "LICENSE"
     manifest {
         attributes([
-                "Specification-Title"     : "GeckoLib",
-                "Specification-Vendor"    : "Gecko",
-                "Specification-Version"   : "1", // We are version 1 of ourselves
-                "Implementation-Title"    : name,
+                "Specification-Title"     : "${mod_display_name}",
+                "Specification-Vendor"    : mod_authors,
+                "Specification-Version"   : "4",
+                "Implementation-Title"    : project.name,
                 "Implementation-Version"  : version,
-                "Implementation-Vendor"   : "Gecko",
+                "Implementation-Vendor"   : mod_authors,
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
@@ -153,7 +152,7 @@ publishing {
 modrinth {
     token = System.getenv("modrinthKey") ?: "Invalid/No API Token Found"
     projectId = '8BmcQJ2H'
-    versionNumber = version
+    versionNumber = project.version
     versionName = "Fabric ${minecraft_version}"
     uploadFile = remapJar
     changelog = rootProject.file("changelog.txt").text
