--- a/Forge/build.gradle
+++ b/Forge/build.gradle
@@ -125,7 +125,7 @@ jar {
                 "Specification-Title"     : "${mod_display_name}",
                 "Specification-Vendor"    : mod_authors,
                 "Specification-Version"   : "4",
-                "Implementation-Title"    : project.name,
+                "Implementation-Title"    : mod_display_name + " " + project.name,
                 "Implementation-Version"  : version,
                 "Implementation-Vendor"   : mod_authors,
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
