Convert the remainder of the geo renderers to use the buffersource specifically from levelrenderer, because it seems some shaders don't patch things properly

--- a/Forge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/Forge/src/main/resources/META-INF/accesstransformer.cfg
@@ -7,3 +7,4 @@ public net.minecraft.client.model.AgeableListModel f_170339_ # babyZHeadOffset
 public net.minecraft.client.model.AgeableListModel f_102010_ # babyHeadScale
 public net.minecraft.client.model.AgeableListModel f_102011_ # babyBodyScale
 public net.minecraft.client.model.AgeableListModel f_102012_ # bodyYOffset
+public net.minecraft.client.renderer.LevelRenderer f_109464_ # renderBuffers
